--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-blog-cosmicjs",
   "version": "1.0.1",
-  "description": "A simple blog app built using Vue & Vuex. It connects to the Cosmic JS CMS via API. You can manage your content from your Cosmic JS Dashboard.",
-  "author": "Jazib Sawar <jazibsawar@gmail.com>",
+  "description": "Bringing back Mental Health and Sanity to the world of startups one joke at a time",
+  "author": "Jazib Sawar <alejandro@latindigital.io>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
